[gd_scene load_steps=2 format=3 uid="uid://c66hreqaxmp83"]

[ext_resource type="Script" uid="uid://ci25fpdobmuhs" path="res://scripts/Login.gd" id="1_1hxp7"]

[node name="Login" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1hxp7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 20

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "Login"

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="UsernameLineEdit" type="LineEdit" parent="VBoxContainer/MarginContainer3"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 20
placeholder_text = "Username"
alignment = 1

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PasswordLineEdit" type="LineEdit" parent="VBoxContainer/MarginContainer4"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 20
placeholder_text = "Password"
alignment = 1
secret = true

[node name="MarginContainer5" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer5"]
layout_mode = 2

[node name="BlankWarning" type="Label" parent="VBoxContainer/MarginContainer5/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = "Please enter something"

[node name="IncorrectWarning" type="Label" parent="VBoxContainer/MarginContainer5/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
text = "Wrong thing"

[node name="LoginButton" type="Button" parent="VBoxContainer/MarginContainer5/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 20
text = "Login"

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Exit" type="Button" parent="VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Exit Game"

[connection signal="text_submitted" from="VBoxContainer/MarginContainer3/UsernameLineEdit" to="." method="_on_username_line_edit_text_submitted"]
[connection signal="text_submitted" from="VBoxContainer/MarginContainer4/PasswordLineEdit" to="." method="_on_password_line_edit_text_submitted"]
[connection signal="pressed" from="VBoxContainer/MarginContainer5/VBoxContainer/LoginButton" to="." method="_on_login_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer2/Exit" to="." method="_on_exit_pressed"]
